Uses gap for flex so we don't need inline margin left and fixed tab re-ordering cache issue (#157)
* now uses gap for flex so we don't need inline margin left

* fixed a minor issue where tab rearrange not working because the cache is not properly refreshed

* CI / CD - Prettier Automatic Commit

--- a/src/App.scss
+++ b/src/App.scss
@@ -73,6 +73,9 @@ $ConnectionTreeIndentSize: 7px;
 
 .QueryBox {
   margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
 .FormInput {
@@ -82,7 +85,8 @@ $ConnectionTreeIndentSize: 7px;
     align-items: center;
   }
   &__Row {
-    margin-bottom: 15px;
+    display: flex;
+    gap: 2rem;
   }
 }
 
